removed alignment bug

--- a/style/slide2.css
+++ b/style/slide2.css
@@ -110,6 +110,9 @@
     all: unset;
 
 }
+#block1{
+    max-width: 360px;
+}
 .blockContainer{
     display: flex;
     justify-content: center;
@@ -128,6 +131,7 @@
     font: 900;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: larger;
+    text-shadow: 1.5px 1.5px 1px rgb(226, 166, 37);
 }
 .blockContainer button:hover{
     background:linear-gradient(rgba(255, 255, 255, 0.5),rgba(128, 128, 128, 0.37));
